--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 style="text-align: center;">
-        Melhor equipe, melhor apresentação! É isso ai.
+        Melhor equipe, melhor apresentação!
     </h1>
 </body>
 </html>
